--- a/UI/mainPage.html
+++ b/UI/mainPage.html
@@ -30,14 +30,11 @@
                         </a>
                     </li>
                 </ul>
-                <form class="d-flex">
+                <form id="searchForm" class="d-flex">
                     <input id="pageSearch" class="form-control me-2" type="search" placeholder="Search by name"
                            aria-label="Search">
-                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                        <option selected>All Categories</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select id="tagsSelect" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                        <option id="allTags" selected>All Categories</option>
                     </select>
                 </form>
                 <ul class="navbar-nav mx-auto">
@@ -65,303 +62,34 @@
 
 <main>
     <div id="categories" class="d-flex justify-content-center py-4">
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg">
-                <img src="img ">
-            </div>
-            <h4> Category </h4>
+        <button id="beforePage" class="btn btn-outline-secondary">
+            <span class="material-icons">navigate_before</span>
+        </button>
+        <div id="categoriesPage" class="d-flex flex-wrap justify-content-center py-4">
+
         </div>
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg ">
-                <img src="img">
-            </div>
-            <h4> Category </h4>
-        </div>
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg">
-                <img src="img">
-            </div>
-            <h4> Category </h4>
-        </div>
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg">
-                <img src="img">
-            </div>
-            <h4> Category </h4>
-        </div>
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg">
-                <img src="img">
-            </div>
-            <h4> Category </h4>
-        </div>
-        <div class="category d-flex flex-column align-items-center mx-5">
-            <div class="tagImg">
-                <img src="img">
-            </div>
-            <h4> Category </h4>
-        </div>
+        <button id="nextPage" class="btn btn-outline-secondary">
+            <span class="material-icons">navigate_next</span>
+        </button>
+    </div>
+    <div id="arrowTop" class="m-2 p-2" hidden>
+        <span class="material-icons md-48">keyboard_arrow_up</span>
     </div>
     <div id="certificates" class="d-flex justify-content-start flex-wrap align-content-between my-5 mx-5 px-2">
 
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/img.png">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/img_1.png">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/img_2.png">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
-        <div class="certificate m-3">
-            <div class="certificateImg">
-                <img src="img/">
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <h4 class="name m-1 align-self-center"> Certificate name</h4>
-                <span class="material-icons md-16 align-self-center">favorite</span>
-
-            </div>
-            <div class="d-flex mx-2 justify-content-between">
-                <span class="company m-1 align-self-center"> Company </span>
-                <span class="duration m-1 align-self-center"> Expires in 3 days </span>
-            </div>
-            <hr class="dropdown-divider">
-            <div class="d-flex justify-content-between mx-2 my-auto">
-                <span class="price m-1 align-self-center"> 235$ </span>
-                <button button type="button" class="toCartBtn btn btn-sm btn-outline-secondary align-self-center">Add to
-                    Cart
-                </button>
-            </div>
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+            integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="js/initLocalStorage.js"></script>
+    <script src="js/ScrollingScript.js"></script>
+    <script src="js/search.js"></script>
 </main>
 
 </body>
